
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-06-14 DP  1.6.0  Add a Redhat init script for pgAgent [Jeremy Palmer]
2006-06-13 DP  1.6.0  Display non-default op classes in index definitions.
2006-06-12 DP  1.6.0  Minor fixes to the browser code to properly add new nodes
2006-06-12 DP  1.6.0  Fix creation of jobs with multiple steps or schedules per
                      Jeremy Palmer
2006-06-12 DP  1.6.0  Remove unused fc1 packaging files
2006-05-31 DP  1.6.0  Retain values in the edit grid following a failed
                      insert or update per Mario Splivalo. Don't silently lose
                      changes if the user refreshes the data or closes the 
                      window.
2006-05-30 DP  1.6.0  Display, and allow null values to be set in boolean
                      columns in the Edit Grid per Hubert Plaschke.
2006-05-26 DP  1.6.0  Add a data dictionary report for tables.
2006-05-24 DP  1.6.0  Don't enable the OK button on the Grant Wizard until
                      there is something to do, per Dave Minter.
2006-05-24 DP  1.6.0  Use PQresultErrorField() to get more error details
                      from query results. Requires libpq 7.4+.
2006-05-23 DP  1.6.0  Highlight the error word in the query tool if a syntax
                      error is reported by the database.
2006-05-23 DP  1.6.0  Add a guru hint to advise users to use the CREATE script
                      tool to edit function/view code in the Query Tool.
2006-05-22 DP  1.6.0  Display the current character number in the query tool
                      status bar.
2006-05-22 DP  1.4.3  Allow non-superusers to edit roles where appropriate
                      [Thomas Sondag]