@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-06-15 DP  1.6.0  Add a pgAgent option to log to a file on *nix [Jeremy
+                      Palmer]
 2006-06-14 DP  1.6.0  Add a Redhat init script for pgAgent [Jeremy Palmer]
 2006-06-13 DP  1.6.0  Display non-default op classes in index definitions.
 2006-06-12 DP  1.6.0  Minor fixes to the browser code to properly add new nodes
